Fix z-index of secitons picker and post button tooltips.

--- a/scss/partials/_cmail.scss
+++ b/scss/partials/_cmail.scss
@@ -116,7 +116,7 @@ div.cmail-outer {
         top: 0;
         left: 0;
         width: 100vw;
-        z-index: 1;
+        z-index: 3;
         display: block;
 
         div.close-bt-container {
